[package]
name = "cdx"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
colored = "2.1.0"
console = "0.16.3"
crossbeam-channel = "0.5.15"
directories = "6.0.0"
ignore = "0.4.25"
memchr = "2.8.0"
regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive"] }
tempfile = "3.27.0"
terminal_size = "0.4.3"
toml = "1.0.6"
